# python-project-template

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pyup.yml  .readthedocs-requirements.txt  .readthedocs.yml  CHANGELOG.md  LICENSE.AGPLv3.md  LICENSE.MIT.md  Pipfile  README.md  pydoc-markdown.yml  pyproject.toml  version.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/workflows/: build.yml  release.yml
release-notes/: v0.0.1.md
scripts/: lint.py
src/python_project_template/: __init__.py  __main__.py  ppt.py
tests/: test_ppt.py
