[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99
target-version = ["py37"]
include = "\\.pyi?$|\\.cgi$"
exclude = """
(
  /(
    scripts | tests
  )/
)
"""

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.0.1"
version_files = [
  "pyproject.toml:version",
  "src/python_project_template/__init__.py:__version__",
]

[tool.flit.metadata]
module = "python_project_template"
author = "Kristian Thy"
author-email = "k@pyxy.dk"
home-page = "https://github.com/pyxy-dk/python-project-template"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
]
description-file = "README.md"
requires = [
  "flit <4",
  "loguru",
]
requires-python = ">=3.7"
keywords = "github,template,repository"

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "pytest-cov",
]

[tool.isort]
combine_as_imports = true
combine_star = true
ensure_newline_before_comments = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
py_version = 37

[tool.pytest.ini_options]
minversion = "7.0"
filterwarnings = "error::UserWarning"
addopts = "--cov-branch --cov-report xml:coverage.xml --cov-report term-missing:skip-covered --cov=src/python_project_template"
testpaths = [
    "tests",
]
